5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1712_2496.log
== TEST (2019-05-08 14:18:06) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n<=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:18:19) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n<=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:18:46) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n<=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:19:28) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:19:37) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- EXECUTION TIME:
0.163267
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:02) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:24:14) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- EXECUTION TIME:
0.164524
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:24:31) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- OUTPUT:
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:24:44) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	print(m)
	n = int(input("n:"))
-- EXECUTION TIME:
0.143072
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:

-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:25:27) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	n = int(input("n:"))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:25:40) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	n = int(input("n:"))
print(m)
-- EXECUTION TIME:
0.178514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 7, in <module>
    print(m)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:26:05) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	n = int(input("n:"))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:10) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	n = int(input("n:"))
if(n>=0):
   print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:29:39) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n>=0):
	m = p + n
	p = m 
	n = int(input("n:"))
if(m>=0):
   print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(m>=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:31:57) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n!=-1):
	m = p + n
	p = m 
	n = int(input("n:"))
   print(m)
-- ERROR:
File "XXXX", line 7
    print(m)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:32:09) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n!=-1):
	m = p + n
	p = m 
	n = int(input("n:"))
	print(m)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:32:20) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n!=-1):
	m = p + n
	p = m 
	n = int(input("n:"))
	print(m)
-- EXECUTION TIME:
0.174385
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:33:46) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n!=-1):
	m = p + n
	p = m 
	n = int(input("n:"))
print(m)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:33:54) 
-- CODE:
n = int(input("numero: "))
p = 0
while(n!=-1):
	m = p + n
	p = m 
	n = int(input("n:"))
print(m)
-- EXECUTION TIME:
0.151393
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
